@@ -5173,7 +5173,7 @@ typedef struct {
   gcv_object_t direct_slots            _attribute_aligned_object_;
   gcv_object_t direct_default_initargs _attribute_aligned_object_;
   gcv_object_t instantiated            _attribute_aligned_object_;
-  gcv_object_t direct_subclasses       _attribute_aligned_object_; /* list of weak-pointers to all direct subclasses */
+  gcv_object_t direct_subclasses       _attribute_aligned_object_; /* list of weak-pointers to all finalized direct subclasses */
   gcv_object_t proto                   _attribute_aligned_object_; /* class prototype - an instance or NIL */
   gcv_object_t other[unspecified]      _attribute_aligned_object_;
 } *  Class;
